data/derived/sp14/progs/unify/prog1122.ml.out
Characters 51-61:
  let fixpoint (f,b) = wwhile((let g x = f x != x in (y,y != x)), b);;
                                                     ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
